--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
-  "name": "webpacktest",
+  "name": "fetch-axios",
   "version": "1.0.0",
-  "description": "",
-  "main": "test.js",
+  "description": "一个基于 fetch 的 axios",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js"
+    "start": "node server/koa.js"
   },
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yeyan1996/my-fetch.git"
+  },
+  "keywords": [
+    "fetch"
+  ],
+  "author": "yeyan1996",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/yeyan1996/my-fetch/issues"
+  },
+  "homepage": "https://github.com/yeyan1996/my-fetch#readme",
   "devDependencies": {
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.4"
+    "@koa/cors": "^3.0.0",
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-logger": "^3.2.0"
   }
 }
